--- a/School/views/menu.xml
+++ b/School/views/menu.xml
@@ -18,11 +18,12 @@
             parent = "menu_student_root"
             sequence="0"/>
 
-<!--         <menuitem-->
-<!--            id="menu_student_list_root"-->
-<!--            name="Student List"-->
-<!--            parent = "menu_admission_root"-->
-<!--            action = "action_school_admission"-->
-<!--            sequence="0"/>-->
+         <menuitem
+            id="menu_student_list_root"
+            name="Student List"
+            parent = "menu_admission_root"
+            action = "action_school_admission"
+            sequence="0"/>
+
     </data>
 </odoo>
