--- a/School/views/student.xml
+++ b/School/views/student.xml
@@ -2,6 +2,18 @@
 <odoo>
 
 
+    <record id="view_hotel_customer_search" model="ir.ui.view">
+        <field name="model">school.student</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="first_name"/>
+                <field name="last_name"/>
+                <field name="gender"/>
+                <field name="city"/>
+            </search>
+        </field>
+    </record>
+
     <record id="view_hotel_customer_tree" model="ir.ui.view">
         <field name="model">school.student</field>
         <field name="arch" type="xml">
@@ -11,7 +23,6 @@
                 <field name="standard"/>
                 <field name="date_of_birth"/>
                 <field name="student_age"/>
-
                 <field name="gender"/>
                 <field name="address"/>
                 <field name="city"/>
@@ -32,7 +43,6 @@
                             <field name="standard"/>
                             <field name="date_of_birth"/>
                             <field name="student_age"/>
-
                         </group>
                         <group>
                             <field name="gender"/>
