[add some work]

--- a/School/views/student_list.xml
+++ b/School/views/student_list.xml
@@ -12,22 +12,34 @@
         </field>
     </record>
 
-    <record id="view_hotel_customer_tree" model="ir.ui.view">
+<!--    <record id="view_hotel_customer_tree" model="ir.ui.view">-->
+<!--        <field name="name">view.hotel.customer_tree</field>-->
+<!--        <field name="model">school.student</field>-->
+<!--        <field name="arch" type="xml">-->
+<!--            <tree>-->
+<!--                <field name="first_name"/>-->
+<!--                <field name="last_name"/>-->
+<!--                <field name="standard"/>-->
+<!--                <field name="gender"/>-->
+<!--                <field name="address"/>-->
+<!--                <field name="contact"/>-->
+<!--            </tree>-->
+<!--        </field>-->
+<!--    </record>-->
+    <record id="student_tree" model="ir.ui.view">
+        <field name="name">student.tree</field>
         <field name="model">school.student</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="first_name"/>
                 <field name="last_name"/>
-                <field name="standard"/>
-                <field name="gender"/>
-                <field name="address"/>
-                <field name="contact"/>
             </tree>
         </field>
     </record>
 
 
-    <record id="view_hotel_customer_form" model="ir.ui.view">
+    <record id="view_teacher_form" model="ir.ui.view">
+        <field name="name">view.teacher.form</field>
         <field name="model">school.student</field>
         <field name="arch" type="xml">
             <form>
@@ -37,9 +49,12 @@
                             <field name="first_name"/>
                             <field name="last_name"/>
                             <field name="standard"/>
+<!--                            <field name="partner_id"/>-->
                         </group>
                         <group>
                             <field name="gender"/>
+                            <field name="teacher_id"/>
+<!--                            <field name="qualification"/>-->
                             <field name="address"/>
                             <field name="contact"/>
                         </group>
