--- a/School/views/assignment.xml
+++ b/School/views/assignment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_hotel_customer_search" model="ir.ui.view">
+    <record id="view_assignment_student_search" model="ir.ui.view">
         <field name="model">assignment.student</field>
         <field name="arch" type="xml">
             <search>
@@ -14,7 +14,7 @@
         </field>
     </record>
 
-    <record id="view_hotel_customer_tree" model="ir.ui.view">
+    <record id="view_assignment_student_tree" model="ir.ui.view">
         <field name="model">assignment.student</field>
         <field name="arch" type="xml">
             <tree>
@@ -32,7 +32,8 @@
     </record>
 
 
-    <record id="view_hotel_customer_form" model="ir.ui.view">
+    <record id="view_assignment_student_form" model="ir.ui.view">
+         <field name="name">view.assignment.student.form</field>
         <field name="model">assignment.student</field>
         <field name="arch" type="xml">
             <form>
