--- a/School/views/attendance_teacher.xml
+++ b/School/views/attendance_teacher.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_hotel_customer_search" model="ir.ui.view">
+    <record id="view_attendance_
+    teacher_search" model="ir.ui.view">
         <field name="model">attendance.teacher</field>
         <field name="arch" type="xml">
             <search>
@@ -13,7 +14,7 @@
         </field>
     </record>
 
-    <record id="view_hotel_customer_tree" model="ir.ui.view">
+    <record id="view_attendance_teacher_tree" model="ir.ui.view">
         <field name="model">attendance.teacher</field>
         <field name="arch" type="xml">
             <tree>
@@ -29,7 +30,7 @@
     </record>
 
 
-    <record id="view_hotel_customer_form" model="ir.ui.view">
+    <record id="view_attendance_teacher_form" model="ir.ui.view">
         <field name="model">attendance.teacher</field>
         <field name="arch" type="xml">
             <form>
