--- a/School/views/semester_fees.xml
+++ b/School/views/semester_fees.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="view_hotel_customer_search" model="ir.ui.view">
+    <record id="view_semester_fees_search" model="ir.ui.view">
         <field name="model">semester.fees</field>
         <field name="arch" type="xml">
             <search>
@@ -15,7 +15,7 @@
         </field>
     </record>
 
-    <record id="view_hotel_customer_tree" model="ir.ui.view">
+    <record id="view_semester_fees_tree" model="ir.ui.view">
         <field name="model">semester.fees</field>
         <field name="arch" type="xml">
             <tree>
@@ -30,7 +30,7 @@
     </record>
 
 
-    <record id="view_hotel_customer_form" model="ir.ui.view">
+    <record id="view_semester_fees_form" model="ir.ui.view">
         <field name="model">semester.fees</field>
         <field name="arch" type="xml">
             <form>
