--- a/School/views/hall_ticket.xml
+++ b/School/views/hall_ticket.xml
@@ -36,6 +36,7 @@
                 <sheet>
                     <group>
                         <group>
+                            <field name="name"/>
                             <field name="student_name"/>
                             <field name="year"/>
                             <field name="roll_no"/>
@@ -44,6 +45,7 @@
                             <field name="standard"/>
                             <field name="section"/>
                             <field name="date"/>
+                            <field name="student_ids" widget="many2many_tags"/>
                         </group>
                     </group>
                 </sheet>
