--- a/School/views/attendance_teacher.xml
+++ b/School/views/attendance_teacher.xml
@@ -30,6 +30,7 @@
 
 
     <record id="view_attendance_teacher_form" model="ir.ui.view">
+        <field name="name">view.attendance.teacher.form</field>
         <field name="model">attendance.teacher</field>
         <field name="arch" type="xml">
             <form>
@@ -39,14 +40,23 @@
                             <field name="name"/>
                             <field name="present"/>
                             <field name="absent"/>
-                            <field name="teacher_ids"/>
                         </group>
                         <group>
-                            <field name="remark"/>
-                            <field name="start_time"/>
-                            <field name="end_time"/>
+<!--                            <field name="remark"/>-->
+<!--                            <field name="start_time"/>-->
+<!--                            <field name="end_time"/>-->
                         </group>
                     </group>
+                    <notebook>
+                        <page string="Teacher" name="Teacher">
+                            <field name = "teacher_ids"/>
+                            <tree>
+                                <field name = "name"/>
+                                <field name = "first_name"/>
+                                <field name = "last_name"/>
+                            </tree>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
