--- a/School/views/attendance_student.xml
+++ b/School/views/attendance_student.xml
@@ -9,6 +9,10 @@
                 <field name="present"/>
                 <field name="absent"/>
                 <field name="remark"/>
+                <filter string="Low Student" name="student" domain="[('type_student', '=', 'low')]"/>
+                <filter string="Medium Student" name="student" domain="[('type_student', '=', 'medium')]"/>
+                <filter string="Clever Student" name="student" domain="[('type_student', '=', 'clever')]"/>
+                <filter string="Teacher" name="teacher" domain="[]" context="{'group_by':'teacher_id'}"/>
             </search>
         </field>
     </record>
@@ -37,8 +41,10 @@
                     <group>
                         <group>
                             <field name="name"/>
+                            <field name="type_student"/>
                             <field name="present"/>
                             <field name="absent"/>
+                            <field name="teacher_id"/>
                         </group>
                         <group>
                             <field name="remark"/>
