--- a/School/views/student_list.xml
+++ b/School/views/student_list.xml
@@ -44,6 +44,11 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_title">
+                    <h1>
+                        <field name="name" readonly="1"/>
+                    </h1>
+                </div>
                     <group>
                         <group>
                             <field name="first_name"/>
@@ -54,7 +59,6 @@
                         <group>
                             <field name="gender"/>
                             <field name="teacher_id"/>
-                            <field name="name"/>
 <!--                            <field name="qualification"/>-->
                             <field name="address"/>
                             <field name="contact"/>
