--- a/School/views/student_list.xml
+++ b/School/views/student_list.xml
@@ -65,6 +65,7 @@
                             <field name="address"/>
                             <field name="contact"/>
                             <field name="city"/>
+                            <field name="partner_id"/>
                         </group>
                     </group>
                 </sheet>
