--- a/School/views/attendance_peon.xml
+++ b/School/views/attendance_peon.xml
@@ -39,6 +39,7 @@
                             <field name="name"/>
                             <field name="present"/>
                             <field name="absent"/>
+                            <field name="first_name"/>
                         </group>
                         <group>
                             <field name="remark"/>
