--- a/School/views/attendance_teacher.xml
+++ b/School/views/attendance_teacher.xml
@@ -40,6 +40,8 @@
                             <field name="name"/>
                             <field name="present"/>
                             <field name="absent"/>
+                                                            <field name = "remark"/>
+
                         </group>
                         <group>
 <!--                            <field name="remark"/>-->
