--- a/School/views/student.xml
+++ b/School/views/student.xml
@@ -6,7 +6,7 @@
         <field name="model">admission.student</field>
         <field name="arch" type="xml">
             <search>
-                <field name="first_name"/>
+                <field name="name"/>
                 <field name="last_name"/>
                 <field name="gender"/>
                 <field name="city"/>
@@ -18,11 +18,11 @@
         <field name="model">admission.student</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="first_name"/>
+                <field name="name"/>
                 <field name="last_name"/>
                 <field name="father_name"/>
                 <field name="mother_name"/>
-                <field name="student_age"/>
+                <field name="age"/>
                 <field name="city"/>
                 <field name="last_standard"/>
                 <field name="current_standard"/>
@@ -40,13 +40,18 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>
                     <group>
                         <group>
-                            <field name="first_name"/>
+                            <field name="name"/>
                             <field name="last_name"/>
                             <field name="father_name"/>
                             <field name="mother_name"/>
-                            <field name="student_age"/>
+                            <field name="age"/>
                             <field name="city"/>
                         </group>
                         <group>
@@ -56,6 +61,7 @@
                             <field name="address"/>
                             <field name="gender"/>
                             <field name="contact"/>
+                            <field name="student_ids"/>
                         </group>
                     </group>
                 </sheet>
