--- a/School/views/attendance_guardian.xml
+++ b/School/views/attendance_guardian.xml
@@ -39,11 +39,13 @@
                             <field name="name"/>
                             <field name="present"/>
                             <field name="absent"/>
+                            <field name="first_name"/>
                         </group>
                         <group>
                             <field name="remark"/>
                             <field name="start_time"/>
                             <field name="end_time"/>
+                            <field name="guardian_id"/>
                         </group>
                     </group>
                 </sheet>
