--- a/School/views/guardian.xml
+++ b/School/views/guardian.xml
@@ -34,12 +34,19 @@
         <field name="model">guardian.student</field>
         <field name="arch" type="xml">
             <form>
-                <sheet>
+                <sheet><div class="oe_title">
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>
+
                     <group>
                         <group>
                             <field name="first_name"/>
                             <field name="last_name"/>
                             <field name="dob"/>
+                            <field name="age"/>
+                            <field name="name"/>
                             <field name="qualification"/>
                         </group>
                         <group>
@@ -47,6 +54,7 @@
                             <field name="address"/>
                             <field name="city"/>
                             <field name="contact"/>
+                            <field name="guardian_ids"/>
                         </group>
                     </group>
                 </sheet>
