--- a/School/views/peon.xml
+++ b/School/views/peon.xml
@@ -35,6 +35,11 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                     <div class="oe_title">
+                        <h1>
+                            <field name="name" readonly="1"/>
+                        </h1>
+                    </div>
                     <group>
                         <group>
                             <field name="first_name"/>
@@ -45,11 +50,13 @@
                         </group>
                         <group>
                             <field name="gender"/>
+                            <field name="age"/>
                             <field name="address"/>
                             <field name="city"/>
                             <field name="contact"/>
                             <field name="name"/>
                             <field name="peon_ids"/>
+                            <field name="address"/>
                         </group>
                     </group>
                 </sheet>
