[pivotview,graphview,xml.inheritance]

--- a/School/views/guardian.xml
+++ b/School/views/guardian.xml
@@ -57,6 +57,11 @@
                             <field name="guardian_ids"/>
                         </group>
                     </group>
+                     <notebook>
+                        <page string="Guardian IDS">
+                                    <field name="guardian_ids"/>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
         </field>
